apps/edb/base/Gateway_cluster-ingress-gw.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: cluster-ingress-gw
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 8000
        name: https-8000
        protocol: HTTPS
      hosts:
        - rtr-app-cluster-1.rtr-app-edb.svc
      tls:
        mode: AUTO_PASSTHROUGH
    - port:
        number: 9187
        name: https-9187
        protocol: HTTPS
      hosts:
        - rtr-app-cluster-1.rtr-app-edb.svc
      tls:
        mode: AUTO_PASSTHROUGH
    # - port:
    #     number: 9443
    #     name: https-9443
    #     protocol: HTTPS
    #   tls:
    #     mode: PASSTHROUGH
    #   hosts:
    #     - "rtr-app-edb/*"
    # - port:
    #     number: 8080
    #     name: http-8080
    #     protocol: HTTP
    #   hosts:
    #     - "rtr-app-edb/*"
