apps/edb/base/VirtualService_cluster-ingress-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: cluster-ingress-vs
spec:
  hosts:
    - rtr-app-cluster-1.rtr-app-edb.svc
    - rtr-app-cluster-2.rtr-app-edb.svc
    - rtr-app-cluster-3.rtr-app-edb.svc
  gateways:
    - cluster-ingress-gw
  tcp:
    - match:
        - host: rtr-app-cluster-1.rtr-app-edb.svc
      route:
      - destination:
          host: rtr-app-cluster-1.rtr-app-edb.svc
        weight: 100
    - match:
        - host: rtr-app-cluster-2.rtr-app-edb.svc
      route:
      - destination:
          host: rtr-app-cluster-2.rtr-app-edb.svc
        weight: 100
    - match:
        - host: rtr-app-cluster-3.rtr-app-edb.svc
      route:
      - destination:
          host: rtr-app-cluster-3.rtr-app-edb.svc
        weight: 100
    # - match:
    #   - port: 8000
    #     sniHosts:
    #     - rtr-app-cluster-1.rtr-app-edb
    #     route:
    #     - destination:
    #         host: rtr-app-cluster-1.rtr-app-edb
    #         port:
    #           number: 8000
    # - match:
    #   - port: 9187
    #     sniHosts:
    #     - rtr-app-cluster-1.rtr-app-edb
    #   route:
    #   - destination:
    #       host: rtr-app-cluster-1.rtr-app-edb
    #       port:
    #         number: 9187
